...
      children: [
        // Row untuk Kas Masuk & Kas Keluar
        Row(
          children: [
            Expanded(
              child: _FinanceCard(
                title: 'Kas Masuk',
                value: '500JT',
                icon: Icons.account_balance_wallet_outlined,
                backgroundColor: DashboardColors.incomeBackground,
              ),
            ),
            SizedBox(width: 12),
            Expanded(
              child: _FinanceCard(
                title: 'Kas Keluar',
                value: '50JT',
                icon: Icons.account_balance_wallet_outlined,
                backgroundColor: DashboardColors.outcomeBackground,
              ),
            ),
          ],
...
